# ChangeLog for dev-libs/libaio
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/libaio/ChangeLog,v 1.26 2006/07/10 06:51:25 nerdboy Exp $

  10 Jul 2006; Steve Arnold <nerdboy@gentoo.org>
  +files/libaio-0.3.106-build.patch, libaio-0.3.106-r1.ebuild:
  Fixed build patch, soname, and QA issues, works now on amd64.  Note the
  tests still need a Maekfile patch to work correctly, and I'm not sure
  about the status of the kernel support (upstream kernel patches stop about
  a year ago at 2.6.12).  This is used by the ROMIO support in mpich2.

  09 Jul 2006; Joshua Kinard <kumba@gentoo.org> libaio-0.3.15-r1.ebuild:
  Marked stable on mips.

  26 Jun 2006; Andrej Kacian <ticho@gentoo.org> libaio-0.3.106-r1.ebuild:
  Stable on x86, bug #137915.

  25 Jun 2006; Marcus D. Hanwell <cryos@gentoo.org> libaio-0.3.106.ebuild:
  Marked stable on amd64, bug 137915.

  25 Jun 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  libaio-0.3.106-r1.ebuild:
  ppc stable, bug #137915

  25 Jun 2006; Markus Rothe <corsair@gentoo.org> libaio-0.3.106-r1.ebuild:
  Stable on ppc64; bug #137915

  25 May 2006; Guy Martin <gmsoft@gentoo.org> libaio-0.3.15.ebuild,
  libaio-0.3.15-r1.ebuild:
  Not ported on hppa. Removing ~hppa keyword.

  21 May 2006; Markus Rothe <corsair@gentoo.org> libaio-0.3.106.ebuild:
  Stable on ppc64

*libaio-0.3.106-r1 (17 May 2006)

  17 May 2006; Patrick McLean <chutzpah@gentoo.org>
  +libaio-0.3.106-r1.ebuild:
  Fix for multilib-strict, revbump because this changes the approach to
  multilib support.

  06 May 2006; Mark Loeser <halcy0n@gentoo.org> libaio-0.3.106.ebuild:
  Stable on x86

  27 Apr 2006; Marien Zwart <marienz@gentoo.org> files/digest-libaio-0.3.15,
  files/digest-libaio-0.3.15-r1, files/digest-libaio-0.3.104,
  files/digest-libaio-0.3.106, Manifest:
  Fixing SHA256 digest, pass four

  23 Mar 2006; Luca Barbato <lu_zero@gentoo.org> libaio-0.3.106.ebuild:
  Marked ppc
