@@ -1,6 +1,10 @@
 # ChangeLog for dev-libs/libaio
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libaio/ChangeLog,v 1.26 2006/07/10 06:51:25 nerdboy Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libaio/ChangeLog,v 1.27 2006/07/12 04:35:53 nerdboy Exp $
+
+  12 Jul 2006; Steve Arnold <nerdboy@gentoo.org> libaio-0.3.106.ebuild:
+  Backported fixes to 106 version to use updated patch, but without the
+  src_test updates (use the -r1 version for test updates).
 
   10 Jul 2006; Steve Arnold <nerdboy@gentoo.org>
   +files/libaio-0.3.106-build.patch, libaio-0.3.106-r1.ebuild:
